syntax = "proto3";

package org.e2eelab.lib.protobuf;

import "sender_chain_node.proto";
import "receiver_chain_node.proto";
import "skipped_message_key_node.proto";

message ratchet {
  bytes root_key = 1;
  sender_chain_node sender_chain = 2;
  repeated receiver_chain_node receiver_chains = 3;
  repeated skipped_message_key_node skipped_message_keys = 4;
}